--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ a:hover{
     color:white;
     margin-top: 2vh;
     margin-left: 2vw;
-    font-size: 4.5vh;
+    font-size: 25px;
     font-family: 'BenchNine', sans-serif;
 }
 
@@ -77,7 +77,7 @@ a:hover{
 .menu-item{
     color:white;
     margin-left: 4vw;
-    font-size: 3.2vh;
+    font-size: 20px;
 }
 
 .fadeImage{
@@ -91,15 +91,5 @@ a:hover{
 
     to{
         opacity: 1;
-    }
-}
-
-@media (max-width: 576px){
-    #menu-brand{
-        font-size: 4vh;
-    }
-    
-    .menu-item{
-        font-size: 3.2vh;
     }
 }
