--- a/contato/contato.css
+++ b/contato/contato.css
@@ -44,7 +44,7 @@ a:hover{
     color:white;
     margin-top: 2vh;
     margin-left: 2vw;
-    font-size: 4.5vh;
+    font-size: 25px;
     font-family: 'BenchNine', sans-serif;
 }   
 
@@ -77,7 +77,7 @@ a:hover{
 .menu-item{
     color:white;
     margin-left: 4vw;
-    font-size: 3.2vh;
+    font-size: 18px;
 }
 
 .fadeImage{
@@ -117,11 +117,5 @@ a:hover{
 }
 
 .contato-item{
-    font-size: 3vh;
-}
-
-@media (max-width: 576px){
-    .menu-item{
-        font-size: 2.6vh;
-    }
+    font-size: 17px;
 }
