--- a/contato/contato.css
+++ b/contato/contato.css
@@ -77,7 +77,7 @@ a:hover{
 .menu-item{
     color:white;
     margin-left: 4vw;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .fadeImage{
@@ -117,5 +117,27 @@ a:hover{
 }
 
 .contato-item{
-    font-size: 17px;
+    font-size: 20px;
+}
+
+@media (max-width: 768px){
+    .contato-item{
+        font-size: 15px;
+    }
+    .menu-item{
+        color:white;
+        margin-left: 4vw;
+        font-size: 15px;
+    }
+    #menu-hamburger{
+        margin-top: 3vh;
+        font-size: 25px;
+    }
+    #menu-brand{
+        color:white;
+        margin-top: 2vh;
+        margin-left: 2vw;
+        font-size: 25px;
+        font-family: 'BenchNine', sans-serif;
+    } 
 }
