--- a/trabalhos/trabalhos.css
+++ b/trabalhos/trabalhos.css
@@ -62,7 +62,7 @@ a{
 .image-container{
     background-position:center;
     background-size:cover;
-    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
     height: 40vh;
     border: none;
 }
