--- a/trabalhos/trabalhos.css
+++ b/trabalhos/trabalhos.css
@@ -51,13 +51,12 @@ a{
 
 .menu-slide{
     position: fixed;
-    right: 0;
-    width: 100%;
+    right: -40vw;
     height: 100vh;
     padding-top: 25vh;
-    background-color: #d5f;
+    background-color: #000;
     text-align: right;
-    display: block;
+    display: none;
 }
 
 .image-container{
