--- a/trabalhos/trabalhos.css
+++ b/trabalhos/trabalhos.css
@@ -1,6 +1,14 @@
 body{
     padding: 0;
     margin: 0;
+    
+    overflow: hidden;
+    
+    font-family: 'Open Sans Condensed', sans-serif;
+}
+
+body.active{
+    overflow: auto;
 }
 
 a:hover, a:visited, a:link, a:active{
@@ -11,52 +19,42 @@ a{
     text-decoration: none;
 }
 
-#menu-hamburger{
-    color: white;
-    margin-top: 10px;
-    margin-right: 5vw;
-}
-
-#navbarSupportedContent{
-    margin-top: 8vh;
-}
-
-@media (max-width: 576px){
-    #navbarSupportedContent{
-        margin-top: 5vh;
-    }
-}
-
-#loading-spinner{
-    width: 100%;
-    height: 100vh;
-    background-color: black;
-    text-align: center;
+#loading-div{
     position: fixed;
-    z-index: 1;
+    
+    background-color: black;
+    
+    width: 100%;
+    height: 100%;
+    
+    padding-top: 40vh;
+    
+    text-align: center;
+    
+    opacity: 1;
+    
+    visibility: visible;
+    
+    transition: opacity 1s, visibility .1s 1s;
+    
+    z-index: 2;
 }
 
-.spinner{
+#loading-div.active{
+    opacity: 0;
+    
+    visibility: hidden;
+}
+
+#loading-div i{    
+    -webkit-animation: spin 1s linear infinite;
+    
     color: white;
-    margin-top: 40vh;
-    font-size: 300%;
-    animation: spin 2s linear infinite;
-    -webkit-animation: spin 2s linear infinite;
 }
 
 @-webkit-keyframes spin{
     0% {transform: rotate(0deg);}
     100% {transform: rotate(360deg);}
-}
-
-.menu-slide{
-    position: fixed;
-    right: -40vw;
-    height: 100vh;
-    padding-top: 25vh;
-    background-color: #000;
-    text-align: right;
-    display: none;
 }
 
 .image-container{
@@ -67,33 +65,11 @@ a{
     border: none;
 }
 
-.menu-item{
-    color: gray;
-    font-size: 25px;
-    margin: 10px 20px;
-    font-family: 'Open Sans Condensed',sans-serif;
-}
-
-.menu-item:hover{
-    color: white;
-}
-
 .large{
     height: 80vh;
 }
 
-.menu-arrow{
-    color: white;
-    font-size: 50px;
-    right: 0;
-    top: 45vh;
-    position: fixed;
-    margin-right: 20px;
-    opacity: 0.5;
-    cursor: pointer;
-}
-
-.foto-zoom{
+#foto-zoom{
     width: 80vw;
     height: 90vh;
     position: fixed;
@@ -108,7 +84,7 @@ a{
     border: none;
 }
 
-.foto-zoom-large{
+#foto-zoom-large{
     width: 30vw;
     height: 90vh;
     position: fixed;
@@ -121,6 +97,120 @@ a{
     background-position: center;
     background-size: cover;
     border: none;
+}
+
+#menu{
+    position: fixed;
+    
+    text-align: center;
+    
+    background-color: black;
+    
+    width: 75px;
+    height: 75px;
+    
+    top: 10px;
+    left: 10px;
+    
+    opacity: 0.5;
+    
+    transition: all .2s;
+}
+
+#menu.active{
+    width: calc(100% - 20px);
+    
+    opacity: 1;
+}
+
+#burger{
+    width: 50px;
+    height: 50px;
+    
+    margin-left: 12px;
+    margin-top: 12px;
+    
+    padding-top: 10px;
+    
+    opacity: 0.6;
+    
+    cursor: pointer;
+}
+
+#burger div{
+    background-color: white;
+    
+    width: 40px;
+    height: 3px;
+    
+    margin-top: 10%;
+    margin-left: 10%;
+    
+    transition: all .2s;
+}
+
+#burger:hover{
+    opacity: 1;
+}
+
+#burger:hover div{
+    background-color: white;
+}
+
+#burger.active div:nth-child(1){
+    -webkit-transform: translateY(9px) rotate(45deg);
+}
+
+#burger.active div:nth-child(2){
+    display: none;
+}
+
+#burger.active div:nth-child(3){
+    -webkit-transform: rotate(-45deg);
+}
+
+#menu-content{
+    display: none;
+    
+    position: fixed;
+    
+    width: 75;
+    height: 75px;
+    
+    padding: 23px 0 0 0;
+    
+    top: 10px;
+    left: 110px;
+    
+    transition: width .2s;
+}
+
+#menu-content a{
+    color: white;
+    
+    float: left;
+    
+    flex-grow: 1;
+    
+    font-size: 20px;
+}
+
+#menu-content a:hover{
+    color: darkgrey
+}
+
+#menu-content.active{
+    display: flex;
+    
+    width: 80%;
+}
+
+@media (max-width: 444px){
+    #menu-content.active{
+        display: flex;
+
+        width: 60%;
+    }
 }
 
 .row{
