--- a/audiovisual/audiovisual.css
+++ b/audiovisual/audiovisual.css
@@ -1,6 +1,12 @@
 body{
     font-family: 'Open Sans Condensed', sans-serif;
     background-color: black;
+    
+    overflow: hidden;
+}
+
+body.active{
+    overflow: auto;
 }
 
 a:hover, a:visited, a:link, a:active{
@@ -30,13 +36,19 @@ a:hover{
     font-size: 5vh;
 }
 
-#loading-spinner{
+#loading-div{
     width: 100%;
     height: 100vh;
     background-color: black;
     text-align: center;
     position: fixed;
     z-index: 2;
+}
+
+#loading-div.active{
+    opacity: 0;
+    
+    visibility: hidden;
 }
 
 .spinner{
