--- a/audiovisual/audiovisual.css
+++ b/audiovisual/audiovisual.css
@@ -37,11 +37,23 @@ a:hover{
 }
 
 #loading-div{
-    width: 100%;
-    height: 100vh;
-    background-color: black;
-    text-align: center;
     position: fixed;
+    
+    background-color: black;
+    
+    width: 100%;
+    height: 100%;
+    
+    padding-top: 40vh;
+    
+    text-align: center;
+    
+    opacity: 1;
+    
+    visibility: visible;
+    
+    transition: opacity 1s, visibility .1s 1s;
+    
     z-index: 2;
 }
 
