--- a/audiovisual/audiovisual.css
+++ b/audiovisual/audiovisual.css
@@ -63,13 +63,14 @@ a:hover{
     visibility: hidden;
 }
 
-.spinner{
-    color: white;
-    margin-top: 40vh;
+#loading-div i{
     font-size: 300%;
-    animation: spin 2s linear infinite;
-    -webkit-animation: spin 2s linear infinite;
+    
+    -webkit-animation: spin 1s linear infinite;
+    
+    color: white;
 }
+
 
 @-webkit-keyframes spin{
     0% {transform: rotate(0deg);}
